# syndicate-rs

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  fixtags.sh  gatekeeper-config.pr  http-config.pr  rustup-and-install.sh  syndicate-rs.code-workspace
.forgejo/workflows/: build.yaml
.forgejo/workflows/builder-image/: Dockerfile  build-and-push.sh
benches/: bench_dataspace.rs
dev-scripts/: benchmark-config.pr  restarting-consumer  restarting-producer  restarting-state-consumer  restarting-state-producer  run-server
docker/: .gitignore  Dockerfile  Makefile  README.md  alpine-architecture  docker-architecture  docker-compose.yml
examples/: consumer.rs  pingpong.rs  producer.rs  state-consumer.rs  state-producer.rs
git-hooks/: pre-commit
local-protocols/schemas/: tunnelRelay.prs
schemas/: dataspacePatterns.prs  gatekeeper.prs  http.prs  noise.prs  protocol.prs  service.prs  sturdy.prs
src/: actor.rs  bag.rs  config.rs  dataspace.rs  during.rs  error.rs  lib.rs  main.rs  packets.rs  pattern.rs  peer.rs  relay.rs  skeleton.rs  spaces.rs  sturdy.rs  term.rs  tracer.rs
src/schemas/: mod.rs
syndicate/: Cargo.toml  Makefile  README.md  build.rs
syndicate-macros/: Cargo.toml
syndicate-macros/examples/: box-and-client.rs  ring.rs  tokio-ring.rs
syndicate-macros/src/: dur.rs  lib.rs  pat.rs  stx.rs  val.rs
syndicate-schema-plugin/: Cargo.toml  build.rs
syndicate-schema-plugin/src/: lib.rs  pattern.rs  pattern_plugin.rs
syndicate-server/: Cargo.toml  Makefile  build.rs  other_logos.txt
syndicate-server/debian/: service
syndicate-server/examples/: consumer.rs  dirty-consumer.rs  dirty-producer.rs  pingpong.rs  producer.rs  state-consumer.rs  state-producer.rs
syndicate-server/examples/dirty/: mod.rs
syndicate-server/protocols/schemas/: control.prs  documentation.prs  externalServices.prs  gatekeeperMux.prs  internalServices.prs
syndicate-server/src/: counter.rs  dependencies.rs  gatekeeper.rs  http.rs  language.rs  lifecycle.rs  main.rs  protocol.rs
syndicate-server/src/resolution/: client.rs  mod.rs  noise.rs  sturdy.rs  transports.rs
syndicate-server/src/script/: mod.rs
syndicate-server/src/services/: config_watcher.rs  daemon.rs  debt_reporter.rs  gatekeeper.rs  http_router.rs  milestone.rs  mod.rs  stdio_relay_listener.rs  tcp_relay_listener.rs  unix_relay_listener.rs
syndicate-server/src/ui/: mod.rs
syndicate-tools/: Cargo.toml
syndicate/benches/: bench_dataspace.rs  ring.rs
syndicate/doc/: actor.md  flow-control.md  linked-tasks.md  what-is-an-actor.md
syndicate/examples/: inf.rs  state-consumer.rs  state-producer.rs
syndicate/protocols/schemas/: dataspacePatterns.prs  gatekeeper.prs  http.prs  noise.prs  protocol.prs  rpc.prs  service.prs  sturdy.prs  timer.prs  trace.prs
syndicate/src/: actor.rs  bag.rs  convert.rs  dataflow.rs  dataspace.rs  during.rs  error.rs  lib.rs  pattern.rs  relay.rs  rewrite.rs  rpc.rs  skeleton.rs  sturdy.rs  supervise.rs  trace.rs  tracer.rs
