cargo-features = ["strip"]

[workspace]
members = [
  "syndicate",
  "syndicate-macros",
  "syndicate-server",
  "syndicate-tools",
  ]

# [patch.crates-io]
# #
# # Use a bind mount for localdev:
# #
# #   mkdir localdev
# #   sudo mount --bind /home/tonyg/src localdev
# #
# preserves = { path = "localdev/preserves/implementations/rust/preserves" }
# preserves-schema = { path = "localdev/preserves/implementations/rust/preserves-schema" }

[profile.release]
strip = true
# debug = true
# lto = true

[profile.bench]
debug = true
