[workspace]
members = [
  "syndicate-schema-plugin",
  "syndicate",
  "syndicate-macros",
  "syndicate-server",
  "syndicate-tools",
  ]

resolver = "3"

[workspace.package]
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"
edition = "2018"

# [patch.crates-io]
# #
# # Use a bind mount for localdev:
# #
# #   mkdir localdev
# #   sudo mount --bind /home/tonyg/src localdev
# #
# preserves = { path = "localdev/preserves/implementations/rust/preserves" }
# preserves-schema = { path = "localdev/preserves/implementations/rust/preserves-schema" }

[profile.release]
strip = true
# debug = true
# lto = true

[profile.bench]
debug = true

# [patch.crates-io]
# # Unfortunately, until [1] is fixed (perhaps via [2]), we have to use a patched proc-macro2.
# # [1]: https://github.com/dtolnay/proc-macro2/issues/402
# # [2]: https://github.com/dtolnay/proc-macro2/pull/407
# proc-macro2 = { git = "https://github.com/tonyg/proc-macro2", branch = "repair_span_start_end" }
