[workspace]
members = [
  "syndicate-schema-plugin",
  "syndicate",
  "syndicate-macros",
  "syndicate-server",
  "syndicate-tools",
  ]

resolver = "3"

[workspace.package]
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"
edition = "2018"

[workspace.dependencies]
preserves = "5.0.0-rc.7"
preserves-schema = "6.0.0-rc.5"

tokio = "1.10"
tokio-util = "0.6"
tokio-stream = "0.1"
bytes = "1.0"
parking_lot = "0.12.1"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

lazy_static = "1.4"

criterion = "0.5.1"

# [patch.crates-io]
# #
# # Use a bind mount for localdev:
# #
# #   mkdir localdev
# #   sudo mount --bind /home/tonyg/src localdev
# #
# preserves = { path = "localdev/preserves-rs/preserves" }
# preserves-schema = { path = "localdev/preserves-rs/preserves-schema" }

[profile.release]
strip = true
# debug = true
# lto = true

[profile.bench]
debug = true

# [patch.crates-io]
# # Unfortunately, until [1] is fixed (perhaps via [2]), we have to use a patched proc-macro2.
# # [1]: https://github.com/dtolnay/proc-macro2/issues/402
# # [2]: https://github.com/dtolnay/proc-macro2/pull/407
# proc-macro2 = { git = "https://github.com/tonyg/proc-macro2", branch = "repair_span_start_end" }
