[package]
name = "syndicate-macros"
version = "0.15.0"
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
edition = "2018"

description = "Support macros for programming with the Syndicated Actor model and Dataspaces."
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syndicate = { path = "../syndicate", version = "^0.21.0"}

proc-macro2 = { version = "^1.0", features = ["span-locations"] }
quote = "^1.0"
syn = "^1.0"

[dev-dependencies]
tokio = { version = "1.10", features = ["io-std"] }
tracing = "0.1"
