[package]
name = "syndicate-macros"
description = "Support macros for programming with the Syndicated Actor model and Dataspaces."
version = "0.34.1"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syndicate = { path = "../syndicate", version = "0.43.0"}

proc-macro2 = { version = "^1.0", features = ["span-locations"] }
quote = "^1.0"
syn = { version = "^1.0", features = ["extra-traits"] } # for impl Debug for syn::Expr

[dev-dependencies]
tokio = { workspace = true, features = ["io-std"] }
tracing.workspace = true

[package.metadata.workspaces]
independent = true
