[package]
name = "syndicate-schema-plugin"
version = "0.10.1"
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
edition = "2018"

description = "Support for using Preserves Schema with Syndicate macros."
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"

[lib]

[build-dependencies]
preserves-schema = "5.996"

[dependencies]
preserves = "4.996"
preserves-schema = "5.996"
lazy_static = "1.4"

[package.metadata.workspaces]
independent = true
