[package]
name = "syndicate-schema-plugin"
description = "Support for using Preserves Schema with Syndicate macros."
version = "0.11.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]

[build-dependencies]
preserves-schema = "5.996"

[dependencies]
preserves = "4.996"
preserves-schema = "5.996"
lazy_static = "1.4"

[package.metadata.workspaces]
independent = true
