[package]
name = "syndicate-schema-plugin"
description = "Support for using Preserves Schema with Syndicate macros."
version = "0.11.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]

[build-dependencies]
preserves-schema.workspace = true

[dependencies]
preserves.workspace = true
preserves-schema.workspace = true
lazy_static.workspace = true

[package.metadata.workspaces]
independent = true
