[package]
name = "syndicate-server"
version = "0.35.2"
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
edition = "2018"

description = "Dataspace server."
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"

[features]
jemalloc = ["dep:tikv-jemallocator"]

[build-dependencies]
preserves-schema = "5.992"
syndicate = { path = "../syndicate", version = "0.31.0"}
syndicate-schema-plugin = { path = "../syndicate-schema-plugin", version = "0.2.0"}

[dependencies]
preserves-schema = "5.992"
syndicate = { path = "../syndicate", version = "0.31.0"}
syndicate-macros = { path = "../syndicate-macros", version = "0.25.0"}

chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
noise-protocol = "0.1"
noise-rust-crypto = "0.5"
notify = "4.0"
structopt = "0.3"

tikv-jemallocator = { version = "0.5.0", optional = true }

tokio = { version = "1.10", features = ["io-std", "time", "process"] }
tokio-util = "0.6"
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
hyper = { version = "0.14.27", features = ["server", "http1", "stream"] }
hyper-tungstenite = "0.11.1"
parking_lot = "0.12.1"

[package.metadata.workspaces]
independent = true
