[package]
name = "syndicate-server"
description = "Dataspace server."
version = "0.50.1"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

default-run = "syndicate-server"

[features]
jemalloc = ["dep:tikv-jemallocator"]

[build-dependencies]
preserves-schema = "5.996"
syndicate = { path = "../syndicate", version = "0.43.0"}
syndicate-schema-plugin = { path = "../syndicate-schema-plugin", version = "0.11.0"}

[dependencies]
preserves-schema = "5.996"
syndicate = { path = "../syndicate", version = "0.43.0"}
syndicate-macros = { path = "../syndicate-macros", version = "0.34.0"}

chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
noise-protocol = "0.1"
noise-rust-crypto = "0.5"
notify = "4.0"
structopt = "0.3"

tikv-jemallocator = { version = "0.5.0", optional = true }

tokio = { version = "1.10", features = ["io-std", "time", "process"] }
tokio-util = "0.6"
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
hyper = { version = "0.14.27", features = ["server", "http1", "stream"] }
hyper-tungstenite = "0.11.1"
parking_lot = "0.12.1"

[package.metadata.workspaces]
independent = true

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = {}
