[package]
name = "syndicate-server"
description = "Dataspace server."
version = "0.50.1"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

default-run = "syndicate-server"

[features]
jemalloc = ["dep:tikv-jemallocator"]

[build-dependencies]
preserves-schema.workspace = true
syndicate = { path = "../syndicate", version = "0.43.0"}
syndicate-schema-plugin = { path = "../syndicate-schema-plugin", version = "0.11.0"}

[dependencies]
preserves-schema.workspace = true
syndicate = { path = "../syndicate", version = "0.43.0"}
syndicate-macros = { path = "../syndicate-macros", version = "0.34.0"}

chrono = "0.4"
futures.workspace = true
parking_lot.workspace = true
lazy_static.workspace = true
noise-protocol = "0.1"
noise-rust-crypto = "0.5"
notify = "4.0"
structopt = "0.3"

tikv-jemallocator = { version = "0.5.0", optional = true }

tokio = { workspace = true, features = ["io-std", "time", "process"] }
tokio-util.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true

hyper = { version = "0.14.27", features = ["server", "http1", "stream"] }
hyper-tungstenite = "0.11.1"

[package.metadata.workspaces]
independent = true

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = {}
