[package]
name = "syndicate-tools"
version = "0.10.0"
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
edition = "2018"

description = "Syndicate command-line utilities."
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"

[dependencies]
preserves = "4.992"
syndicate = { path = "../syndicate", version = "0.31.0"}

clap = { version = "^4.0", features = ["derive"] }
clap_complete = "^4.0"

noise-protocol = "0.1"
noise-rust-crypto = "0.5"

[package.metadata.workspaces]
independent = true
