[package]
name = "syndicate-tools"
description = "Syndicate command-line utilities."
version = "0.21.0-rc.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
preserves.workspace = true
syndicate = { path = "../syndicate", version = "0.44.0-rc.0"}

clap = { version = "^4.0", features = ["derive"] }
clap_complete = "^4.0"

noise-protocol = "0.1"
noise-rust-crypto = "0.5"

[package.metadata.workspaces]
independent = true
