[package]
name = "syndicate"
version = "0.31.1"
authors = ["Tony Garnock-Jones <tonyg@leastfixedpoint.com>"]
edition = "2018"

description = "Syndicated Actor model for Rust, including network communication and Dataspaces."
homepage = "https://syndicate-lang.org/"
repository = "https://git.syndicate-lang.org/syndicate-lang/syndicate-rs"
license = "Apache-2.0"

[features]
vendored-openssl = ["openssl/vendored"]

[build-dependencies]
preserves-schema = "5.992"

[dependencies]
preserves = "4.992"
preserves-schema = "5.992"

tokio = { version = "1.10", features = ["io-util", "macros", "rt", "rt-multi-thread", "time"] }
tokio-util = "0.6"
bytes = "1.0"

futures = "0.3"

blake2 = "0.10"
getrandom = "0.2"
hmac = "0.12"
lazy_static = "1.4"
parking_lot = "0.11"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

# Only used for vendored-openssl, which in turn is being used for cross-builds
openssl = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_dataspace"
harness = false

[[bench]]
name = "ring"
harness = false

[package.metadata.workspaces]
independent = true
