[package]
name = "syndicate"
description = "Syndicated Actor model for Rust, including network communication and Dataspaces."
version = "0.43.0"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
bench = false

[features]
vendored-openssl = ["openssl/vendored"]

[build-dependencies]
preserves-schema = "5.996"
syndicate-schema-plugin = { path = "../syndicate-schema-plugin", version = "0.11.0"}

[dependencies]
preserves = "4.996"
preserves-schema = "5.996"

tokio = { version = "1.10", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
tokio-util = "0.6"
bytes = "1.0"

futures = "0.3"

blake2 = "0.10"
getrandom = "0.2"
hmac = "0.12"
lazy_static = "1.4"
parking_lot = "0.11"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

# Only used for vendored-openssl, which in turn is being used for cross-builds
openssl = { version = "0.10", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_dataspace"
harness = false

[[bench]]
name = "ring"
harness = false

[package.metadata.workspaces]
independent = true
