[package]
name = "syndicate"
description = "Syndicated Actor model for Rust, including network communication and Dataspaces."
version = "0.44.0-rc.2"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
bench = false

[features]
vendored-openssl = ["openssl/vendored"]

[build-dependencies]
preserves-schema.workspace = true
syndicate-schema-plugin = { path = "../syndicate-schema-plugin", version = "0.12.0-rc.0"}

[dependencies]
preserves.workspace = true
preserves-schema.workspace = true

tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
tokio-util.workspace = true
bytes.workspace = true
parking_lot.workspace = true
futures.workspace = true

lazy_static.workspace = true

blake2 = "0.10"
getrandom = "0.2"
hmac = "0.12"

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-futures.workspace = true

# Only used for vendored-openssl, which in turn is being used for cross-builds
openssl = { version = "0.10", optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_dataspace"
harness = false

[[bench]]
name = "ring"
harness = false

[package.metadata.workspaces]
independent = true
